# vytrixe-downloader

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  rebrand_v2.py  tailwind.config.js
ai-engine/: main.py  pyproject.toml
ai-engine/flows/image_content_generator/pipeline/: main.py  pipeline.py  schemas.py  storage_csv.py
ai-engine/flows/image_content_generator/pipeline/prompt_base/: constants.py  manager.py  models.py
ai-engine/flows/image_content_generator/pipeline/prompt_longs/: manager.py
ai-engine/flows/image_content_generator/pipeline/prompt_shorts/: manager.py
ai-engine/outputs/0361369a-6edc-4325-8d1a-365080f51586/: ideas_tracking.csv
ai-engine/outputs/0361369a-6edc-4325-8d1a-365080f51586/ideas/idea_000001/: idea.json  script.json
ai-engine/outputs/4f541693-4885-4cb4-827c-b504fc6d40a9/: ideas_tracking.csv
ai-engine/outputs/4f541693-4885-4cb4-827c-b504fc6d40a9/ideas/idea_000001/: idea.json  (+1 more)
ai-engine/tools/audio_generation/: audio_tool.py  gemini.py
ai-engine/tools/chrome/: driver.py
ai-engine/tools/common/: base_model.py  csv_processor.py  gemini_base.py  messenger.py  style_reference_manager.py
ai-engine/tools/discord/: login.py
ai-engine/tools/env_settings/: settings.py
ai-engine/tools/image_generation/: gemini.py  midjourney.py
ai-engine/tools/midjourney/: base_bot.py
ai-engine/tools/text_generation/: gemini.py
ai-engine/tools/utils/: text.py  time.py
ai-engine/tools/video_editing/: ffmpeg.py  whisper.py  whisper_schemas.py
ai-engine/tools/video_generation/: gemini.py  midjourney.py
(+103 files in other folders)
